--- a/.gitignore
+++ b/.gitignore
@@ -1454,4 +1454,4 @@ public/vendors/js/ui/prism.min.js
 public/vendors/js/unison-js/unison-js.min.js
 public/vendors/js/waves/waves.min.js
 
-
+resources/views/login.blade.php
